[DH2] Changed total spent to non editable field

--- a/Dark_Heresy_2ed/DarkHeresy2ed.html
+++ b/Dark_Heresy_2ed/DarkHeresy2ed.html
@@ -1839,7 +1839,7 @@
 						<label>Total Spent:</label>
 					</div>
 					<div class="sheet-item" style="width:24%">
-						<input name="attr_XPSpent" type="number" value="0">
+						<input readonly name="attr_XPSpent" type="number" value="0">
 					</div>
 					<div class="sheet-item" style="width:1%"></div>
 					<div class="sheet-item" style="width:5%">
