--- a/Warhammer-Fantasy-Roleplay-2nd-Edition/WHFRP2.html
+++ b/Warhammer-Fantasy-Roleplay-2nd-Edition/WHFRP2.html
@@ -1271,7 +1271,7 @@
           <input class="sheet-center" type="number" name="attr_Skill_Silent_Move_Total" value="@{Skill_Silent_Move}+@{Skill_Silent_Move_Talents}+@{Skill_Silent_Move_Misc}-@{armortestpenalty}" disabled="disabled"/>
         </div>
         <div class="sheet-col-07 sheet-center sheet-pad-r-sm sheet-vert-middle">
-          <button type="roll" class="sheet-roll" name="roll_Skill_Silent_Move" value="@{Skill_Silent Move_GM} &{template:whfrp2e} {{title=^{silent-move}}} {{skill=^{basic-skill}}} {{character_name=@{character_name}}} {{target=[[@{Skill_Silent_Move}+@{Skill_Silent_Move_Talents}+@{Skill_Silent_Move_Misc}-@{armortestpenalty}+?{Modifier|0}]]}} {{skilltest=[[1d100]]}}"></button>
+          <button type="roll" class="sheet-roll" name="roll_Skill_Silent_Move" value="@{Skill_Silent_Move_GM} &{template:whfrp2e} {{title=^{silent-move}}} {{skill=^{basic-skill}}} {{character_name=@{character_name}}} {{target=[[@{Skill_Silent_Move}+@{Skill_Silent_Move_Talents}+@{Skill_Silent_Move_Misc}-@{armortestpenalty}+?{Modifier|0}]]}} {{skilltest=[[1d100]]}}"></button>
         </div>
         <div class="sheet-col-045 sheet-center sheet-pad-r-sm sheet-vert-middle">
           <input type="checkbox" name="attr_Skill_Silent_Move_GM" value="/w GM"/>
